# sussex

Alife/: GA_example.py
Artificial Intelligence/Machine Learning/: 02.a KNN_model.ipynb  03.a SVM & RF.ipynb  03_SVM_&_DT.ipynb  04.a MLP.ipynb  report.py
Artificial Intelligence/Natural Language Processing/: 1.0 classifiy.ipynb
Artificial Intelligence/Natural Language Processing/Advanced/: 01 word2vec.ipynb  02.a word2vec.ipynb  03.a word2vec.ipynb  04.a n gram (without smoothing).py  04.b n gram(kneser-ney).py  word2vec.ipynb
Artificial Intelligence/Natural Language Processing/Advanced Natural Language Processing/: 01 word2vec.ipynb
Artificial Intelligence/Natural Language Processing/Applied/: 02. Reviews Classifier.ipynb  03 tf-idf  03. Basic Classifier  04. Bayes Classifier  05 ppmi  05. tf-idf.py  05. wordnet.py
Artificial Intelligence/Natural Language Processing/Test/: 1.1 tf-idf.ipynb
Artificial Intelligence/Python/OOP/: test3
c++/sfml/greedy snake/: CMakeLists.txt
c++/sfml/greedy snake/include/: food.h  snake.h
c++/sfml/greedy snake/src/: food.cpp  game.cpp  main.cpp
games/sfml/tetris/: CMakeLists.txt
games/sfml/tetris/include/: block.h  game.h
games/sfml/tetris/src/: block.cpp
leetcode/stack/: [20]Valid Parentheses.py
nlp/: basicClassification.py  bayesClassification.py  ppmi.py  tf_idf.py  wordnet.py
pygame/sorcerer_tower/: elements.py  main.py  player.py  room.py  setting.py
python/: 01.requests from movie website.py
python/Alife/: GA_example
python/fundamental/: 1.0 OOP  1.1 OOP  1.3 OOP  1.3 test_unittest
(+92 files in other folders)
